<resources>
    <string name="app_name">HireHub</string>
    <string name="about_title">À propos</string>
    <string name="login_student">54516</string>
    <string name="firstName_student">Oumar</string>
    <string name="lastName_student">Magomadov</string>
    <string name="about_student">Cette application a été développer par Oumar Magomadov</string>
    <string name="fragment_login_title">Login</string>
    <string name="fragment_about_title">About</string>
    <string name="login_text">Login</string>
    <string name="login_title_text">Connexion</string>
    <string name="email_hint">Email</string>
    <string name="firstname_hint">Prénom</string>
    <string name="lastname_hint">Nom de famille</string>
    <string name="password_hint">Mot de passe</string>
    <string name="login_button_hint">Se connecter</string>
    <string name="password_content_description">Veuillez entrer votre mot de passe</string>
    <string name="signup_successful_notification">Inscription réussie!</string>
    <string name="signup_unsuccessful_notification">Inscription échouée!</string>
    <string name="signup_password_forgot">Mot de passe oublié ?</string>
    <string name="signup_create_new_question">Pas encore de compte?</string>
    <string name="signup_create_account">Créer un compte</string>
    <string name="signup_gender_unsuccessful">Veuillez choisir un genre</string>
    <string name="signup_role_unsuccessful">Veuillez choisir un rôle</string>
    <string name="signup_password_not_same">Les mots de passes sont pas identiques</string>
    <string name="signup_phone_number">Le numéro de téléphone renseigné n\est pas belge</string>
    <string name="signin_successful_notification">Vous êtes connecté</string>
    <string name="signin_unsuccessful_notification">Connexion échouée!</string>
    <string name="signin_invalide_email">Veuillez entrer un email au bon format</string>
    <string name="form_not_completed">"Veuillez complèter tout les champs"</string>
    <string name="forgot_password_title">Reinitialser mot de passe</string>
    <string name="forgot_password_button">Envoyer un lien de réinitialisation</string>
    <string name="forgot_password_successful">Un mail de réinitialisation a été envoyer</string>
    <string name="forgot_password_unsuccessful">Cette utilisateur n\'existe pas</string>
    <string name="register_title_text">Inscription</string>
    <string name="register_button_hint">Créer un compte</string>
    <string name="register_connect_new_question">Vous avez déjà un compte?</string>
    <string name="register_connect_account">Se connecter</string>
    <string name="password_confirm_hint">Confirmer le mot de passe</string>
    <string name="phone_hint">Numéro de téléphone</string>
    <string name="radio_button_male">Homme</string>
    <string name="radio_button_female">Femme</string>
    <string name="radio_button_user">Utilisateur</string>
    <string name="radio_button_developer">Développeur</string>
    <string name="register_gender">Veuillez choisir votre genre</string>
    <string name="profil_title">Profile</string>
    <string name="meeting_title">Rendez-vous</string>
    <string name="setting_title">Paramètres</string>
    <string name="pending_title">Les rendez-vous en attente d\'approbation</string>
    <string name="search_title">Recherche</string>
    <string name="message_title">Messagerie</string>
    <string name="logout_title">Déconnexion</string>
    <string name="home_menu">Accueil</string>
    <string name="search_menu">Recherche</string>
    <string name="pending_menu">En attente</string>
    <string name="message_menu">Messagerie</string>
    <string name="setting_menu">Paramètre</string>
    <string name="home_title">Bienvenue</string>
    <string name="income_meeting_title">Rendez-vous à venir</string>
    <string name="passed_meeting_title">Rendez-vous passées</string>
    <string name="home_horizontale_description_income">Les rendez-vous qui sont à venir</string>
    <string name="home_horizontale_description_passed">Les rendez-vous qui sont passées</string>
    <string name="application_info">HireHub V1.0</string>
    <string name="logout_message">Vous avez été déconnecté</string>
    <string name="search_hint">Rechercher un développeur</string>
    <string name="search_content_description">Rechercher un développeur sur HireHub</string>
    <string name="search_best_rating_text">Mieux noté</string>
    <string name="appointement_button_hint">Prendre un rendez-vous</string>
    <string name="contact_button_hint">Contacter le développeur</string>
    <string name="back_button_content_description">Retourner en arrière</string>
    <string name="rating_content_description">La note attribuée à ce développeur</string>
    <string name="avatar_content_description">L\'image de profil du développeur</string>
    <string name="appointment_title">Rendez-vous</string>
    <string name="appointment_button">Confirmer le rendez-vous</string>
    <string name="appointement_text">Vous êtes sur le point de prendre un rendez-vous avec</string>
    <string name="appointement_text_extended">le</string>
    <string name="error_incorrect_date">La date sélectionnée ne peut pas être ultérieure à aujourd\'hui.</string>
    <string name="time_slot_minutes">:00</string>
    <string name="accept_button_description">Accepter le rendez-vous</string>
    <string name="refuse_button_description">Refuser le rendez-vous</string>
</resources>