<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="?attr/actionBarSize"
    tools:context=".ui.fragments.ForgotPasswordFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/forgot_password_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:text="@string/forgot_password_title"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/forgot_password_email"
                android:layout_width="@dimen/input_width"
                android:layout_height="@dimen/input_height"
                android:layout_margin="@dimen/margin"
                android:autofillHints="@string/email_hint"
                android:background="@drawable/input_rounded"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/reset_password_button"
                style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_margin="@dimen/margin"
                android:text="@string/forgot_password_button"
                app:cornerRadius="@dimen/corner_radius"
                app:icon="@drawable/baseline_send_24" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>