<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="?attr/actionBarSize"
    tools:context=".ui.fragments.AppointmentFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/card_rounded">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView2"
                android:layout_width="286dp"
                android:layout_height="@dimen/minimum_height"
                android:layout_margin="@dimen/margin"
                android:text="@string/appointment_title"
                android:textAlignment="viewStart"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/back_button"
                app:layout_constraintTop_toTopOf="parent" />

            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView2" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calendarView" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_margin="@dimen/margin"
                android:text="@string/appointment_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView3"
                app:layout_constraintVertical_bias="1.0" />

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="@dimen/minimum_width"
                android:layout_height="@dimen/minimum_height"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/back_button_content_description"
                android:src="@drawable/baseline_arrow_back_24"
                app:layout_constraintBottom_toBottomOf="@+id/materialTextView2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>