<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.DeveloperFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/card_rounded">

            <ImageView
                android:id="@+id/developer_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:contentDescription="@string/appointement_button_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/developer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/developer_avatar" />

            <TextView
                android:id="@+id/developer_domain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/developer_name" />

            <TextView
                android:id="@+id/developer_experience_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/developer_domain" />

            <Button
                android:id="@+id/appointement_button"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="100dp"
                android:hint="@string/appointement_button_hint"
                android:text="@string/appointement_button_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/developer_experience_level" />

            <Button
                android:id="@+id/contact_button"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginBottom="100dp"
                android:hint="@string/contact_button_hint"
                android:text="@string/contact_button_hint"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appointement_button" />

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="@dimen/minimum_width"
                android:layout_height="@dimen/minimum_height"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/back_button_content_description"
                android:src="@drawable/baseline_arrow_back_24"
                app:layout_constraintBottom_toBottomOf="@+id/developer_avatar"
                app:layout_constraintEnd_toStartOf="@+id/developer_avatar"
                app:layout_constraintHorizontal_bias="0.202"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.125" />

            <ImageView
                android:id="@+id/developer_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/rating_content_description"
                android:src="@drawable/baseline_star_24"
                app:layout_constraintBottom_toBottomOf="@+id/rating_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/rating_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/developer_avatar"
                app:layout_constraintEnd_toStartOf="@+id/developer_rating"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/developer_avatar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>